Extra logging and dependencies updated